# theories_of_value

./: .gitignore  README.md  pyproject.toml
tov/notebooks/: 01_preprocess_text.ipynb
tov/poetrybackup/: pyproject.toml
